samples/_failures_safe/1761420600_47e2ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3478b677.c: In function ‘main’:
./samples/SAFE/__tmp_3478b677.c:174: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3478b677.c:173:9: error: expected declaration or statement at end of input
  173 |         if
      |         ^~
./samples/SAFE/__tmp_3478b677.c:173:9: error: expected declaration or statement at end of input
